# src/api/handlers/car_model_comments.go
@@ -1,0 +1,100 @@
+package handlers
+
+import (
+	"GOLANG_CLEAN_WEB_API/src/config"
+	"GOLANG_CLEAN_WEB_API/src/services"
+
+	"github.com/gin-gonic/gin"
+)
+
+type CarModelCommentHandler struct {
+	service *services.CarModelCommentService
+}
+
+func NewCarModelCommentHandler(cfg *config.Config) *CarModelCommentHandler {
+	return &CarModelCommentHandler{
+		service: services.NewCarModelCommentService(cfg),
+	}
+}
+
+// CreateCarModelComment godoc
+// @Summary Create a CarModelComment
+// @Description Create a CarModelComment
+// @Tags CarModelComments
+// @Accept json
+// @Produce json
+// @Param Request body dto.CreateCarModelCommentRequest true "Create a CarModelComment"
+// @Success 201 {object} dto.CarModelCommentResponse "CarModelComment response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad Request"
+// @Router /car-model-comments/ [post]
+// @Security AuthBearer
+func (h *CarModelCommentHandler) Create(c *gin.Context) {
+	Create(c, h.service.Create)
+}
+
+//Update
+
+// UpdateCarModelComment godoc
+// @Summary Update a CarModelComment
+// @Description Update a CarModelComment
+// @Tags CarModelComments
+// @Accept json
+// @Produce json
+// @Param id path int true "Id"
+// @Param Request body dto.UpdateCarModelCommentRequest true "Update a CarModelComment"
+// @Success 200 {object} dto.CarModelCommentResponse "CarModelComment response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad Request"
+// @Router /car-model-comments/{id} [put]
+// @Security AuthBearer
+func (h *CarModelCommentHandler) Update(c *gin.Context) {
+	Update(c, h.service.Update)
+}
+
+//Deleted
+
+// DeleteCarModelComment godoc
+// @Summary Delete a CarModelComment
+// @Description Delete a CarModelComment
+// @Tags CarModelComments
+// @Accept json
+// @Produce json
+// @Param id path int true "id"
+// @Success 200 {object} helper.BaseHttpResponse "Deleted successfully"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad Request"
+// @Router /car-model-comments/{id} [delete]
+// @Security AuthBearer
+func (h *CarModelCommentHandler) Delete(c *gin.Context) {
+	Delete(c, h.service.Delete)
+}
+
+//get
+
+// GetCarModelComment godoc
+// @Summary Get a CarModelComment
+// @Description Get a CarModelComment
+// @Tags CarModelComments
+// @Accept json
+// @Produce json
+// @Param id path int true "Id"
+// @Success 200 {object} dto.CarModelCommentResponse "CarModelComment response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad Request"
+// @Router /car-model-comments/{id} [get]
+// @Security AuthBearer
+func (h *CarModelCommentHandler) GetById(c *gin.Context) {
+	GetById(c, h.service.GetById)
+}
+
+// GetCarModelComments godoc
+// @Summary Filter Countries by pagination & criteria
+// @Description Returns paginated list of countries based on filters
+// @Tags CarModelComments
+// @Accept json
+// @Produce json
+// @Param Request body  dto.PaginationInputWithFilter true "Request"
+// @Success 200 {object} helper.BaseHttpResponse "CarModelComment response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad Request"
+// @Router /car-model-comments/get-by-filter [post]
+// @Security AuthBearer
+func (h *CarModelCommentHandler) GetByFilter(c *gin.Context) {
+	GetByFilter(c, h.service.GetByFilter)
+}
